# mlx-test

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
include/: mlx-test.h
src/: bilinear_gamma.c  cleanup.c  draw.c  draw_ring_segment.c  draw_ring_segment5.c  linear_filter.c  main.c  memcpy.c  mlx_static_line.c  player.c  vector.c
textures/: map_pointer.xpm  open.xpm
